<resources>
    <string name="app_name">My ApplicationT1</string>

    <string name="select_gender">מגדר</string>
    <string-array name="gender_options">
        <item>זכר</item>
        <item>נקבה</item>
    </string-array>

    <string name="select_day_of_week">יום בשבוע</string>
    <string name="view_update_guide_details">צפייה ועדכון פרטי מדריך</string>
    <string name="search_guidename">חיפוש שם מדריך</string>
    <string name="changephoto">שנה תמונה</string>
    <string name="fullname">שם מלא:</string>
    <string name="activenumber">מספר פעיל:</string>
    <string name="email">אימייל:</string>
    <string name="gender">מגדר:</string>
    <string name="birthdate">תאריך לידה:</string>
    <string name="choose_date">בחר תאריך</string>
    <string name="dayofweekguide">יום הדרכה:</string>
    <string name="phone">טלפון:</string>
    <string name="joindate">ת.הצטרפות:</string>
    <string name="address">כתובת:</string>
    <string name="parent1name">שם הורה 1:</string>
    <string name="parent2name">שם הורה 2:</string>
    <string name="parentphone">טלפון הורים:</string>
    <string name="save_changes">שמור שינויים</string>
    <string name="leaving_date">הגדר תאריך עזיבה</string>
    <string name="view_update_student_details">צפייה ועדכון פרטי חניך</string>
    <string name="search_studentname">חיפוש שם חניך</string>
    <string name="dayofweek_student">יום החוג:</string>
    <string name="grade">כיתה:</string>
    <string name="convert_to_guide">המרה למדריך</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמא</string>
    <string name="sign_in_guide">התחבר כמדריך</string>
    <string name="sign_in_manager">התחבר כמנהל</string>
    <string name="forgot_password">שכחתי סיסמא</string>
    <string name="day_to_arrive">יום בשבוע בו יגיע לחוג</string>
    <string name="phone_number">מספר טלפון נייד</string>
    <string name="phone_ofparent">מספר טלפון נייד של אחד ההורים</string>
    <string name="select_photo">בחר תמונה</string>
    <string name="add_to_system">הוספה למערכת</string>
    <string name="add_new_student_to_system">הוספת חניך חדש למערכת</string>
    <string name="add_new_guide_to_system">הוספת מדריך חדש למערכת</string>
    <string name="day_for_guide">יום בשבוע בו מדריך</string>
    <string name="Registering_attendance_for_todays_class">רישום נוכחות לחוג של היום</string>
    <string name="add_guide">הוספת מדריך</string>
    <string name="add_student">הוספת חניך</string>
    <string name="show_update_guide_details">צפייה ועדכון פרטי מדריך</string>
    <string name="show_update_student_details">צפייה ועדכון פרטי חניך</string>
    <string name="accept_requests">אישור בקשות לשיעור נוסף</string>
    <string name="show_classes">צפייה בלוח החוגים</string>
    <string name="registration_completion_class">רישום לשיעור השלמה</string>
    <string name="reports">הפקת דוחות נוכחות</string>
    <string name="home_page">דף הבית - מנהל</string>
    <string name="sign_out">התנתקות</string>
    <string name="activeNumber">מספר פעיל:</string>
    <string name="lessonsSchedule">לוח חוגים</string>
    <string name="lessonTime">שעות החוג:</string>
    <string name="guidesInDate">מדריכים בתאריך זה:</string>
    <string name="studentsInDate">חניכים בתאריך זה:</string>
    <string name="requestsHistory">היסטוריית בקשות</string>
    <string name="signUpToCompClass">רישום לשיעור השלמה</string>
    <string name="searchStudentName">חיפוש שם חניך</string>
    <string name="InGeneralTheStudentDayIs">באופן כללי, החניך משובץ לחוג בימי :</string>
    <string name="compClassWillBeAt">החניך יבצע שיעור השלמה בתאריך:</string>
    <string name="compDate">מועד שיעור השלמה</string>
    <string name="isItInsteadOfDate">האם ההשלמה היא במקום תאריך אחר?</string>
    <string name="yes">כן</string>
    <string name="no_SendToManager">לא, שליחה לאישור מנהל</string>
    <string name="subtraction">רישום חיסור עבור התאריך:</string>
    <string name="chooseDate">בחר תאריך</string>
    <string name="save">שמור</string>
    <string name="goBack">חזור</string>
    <string name="waitingReq">בקשות ממתינות</string>
    <string name="notifications">התראות</string>
    <string name="background">רקע</string>
    <string name="reqWaitingToManager">בקשות ממתינות לאישור מנהל</string>
    <string name="noWaitingReq">אין בקשות ממתינות כרגע</string>
    <string name="convertStudentToGuide">המרת חניך למדריך</string>
    <string name="areYouSureToConvert">האם אתה בטוח שברצונך להמיר את החניך למדריך?</string>
    <string name="ok">אישור</string>
    <string name="cancel">ביטול</string>
    <string name="areYouSureToUpdate">האם הנך בטוח שברצונך לעדכן?</string>
    <string name="updateReq">עדכון בקשה</string>
    <string name="o_k">אשר</string>
    <string name="mainPageGuide">דף הבית - מדריך</string>
    <string name="attendanceForToday">רישום נוכחות לחוג של היום</string>
    <string name="addToCompClass">רישום לשיעור השלמה</string>
    <string name="showschedule">צפייה בלוח החוגים</string>
    <string name="showReports">הפקת דוחות נוכחות</string>
    <string name="signout">התנתק מהמערכת</string>
    <string name="guideName">שם מדריך</string>
    <string name="studentName">שם חניך</string>
    <string name="compClass">(שיעור השלמה)</string>
    <string name="enterManagerCode">הזן קוד מנהל</string>
    <string name="enterCode">הכנס קוד</string>
    <string name="signin">התחבר</string>
    <string name="leavingDate">תאריך עזיבה</string>
    <string name="ChooseTheDate">בחר תאריך</string>
    <string name="clickForDelete">לחץ למחיקה</string>
    <string name="sortBy">מיון לפי:</string>
    <string name="filterBy">סינון לפי:</string>
    <string name="resetFilter">אפס סינון</string>
    <string name="month">חודש</string>
    <string name="exportToExcel">ייצא לאקסל</string>
    <string name="name">שם</string>
    <string name="acNum">מספר פעיל</string>
    <string name="date">תאריך</string>
    <string name="status">סטטוס נוכחות</string>
    <string name="toran">תורן</string>
    <string-array name="days_of_week">
        <item>ראשון</item>
        <item>שני</item>
        <item>שלישי</item>
        <item>רביעי</item>
        <item>חמישי</item>
        <item>שישי</item>
    </string-array>

</resources>