<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- תמונת רקע -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background1"
        android:scaleType="centerCrop"
        android:alpha="0.2" />

    <!-- קובץ עליון עם לוגו -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">

        <!-- תמונה בצד שמאל -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:src="@drawable/logo"
            android:layout_marginLeft="10dp"/>

        <!-- רווח בין התמונות -->
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

    <!-- טקסט כותרת -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/add_new_student_to_system"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <!-- טופס להזנת פרטים -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleText"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <!-- שם מלא -->
            <EditText
                android:id="@+id/fullNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp"/>

            <!-- מספר פעיל -->
            <!-- מספר פעיל -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/activeNumberInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:enabled="false"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="מספר פעיל:"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:textSize="16dp"/>
            </LinearLayout>


            <!--  מגדר  -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp">

                <!-- Spinner של מגדר מיושר לימין -->
                <Spinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender_options"
                    android:gravity="end"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/select_gender"
                    />

                <!-- טקסט "מגדר" מיושר לימין -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:layout_marginEnd="8dp"/>

            </LinearLayout>


            <!-- תאריך לידה -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/birthDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"
                    android:backgroundTint="#7387CEEB"
                    android:textColor="#000000"
                    />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    android:gravity="center_vertical"
                    android:textSize="16dp"/>
            </LinearLayout>

            <!--  יום בשבוע  -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp">


                <!-- Spinner של מגדר מיושר לימין -->
                <Spinner
                    android:id="@+id/dayOfWeekSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/days_of_week"
                    android:gravity="end"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/select_gender"
                    />

                <!-- טקסט "מגדר" מיושר לימין -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_to_arrive"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:layout_marginEnd="8dp"/>

            </LinearLayout>


            <!-- כיתה -->
            <EditText
                android:id="@+id/grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade"
                android:gravity="end"
                android:layout_marginBottom="5dp"
                android:layout_gravity="end"
                android:textAlignment="viewEnd"
                />

            <!-- מספר טלפון חניך -->
            <EditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:gravity="end"
                android:layout_marginBottom="5dp"/>

            <!-- תאריך הצטרפות -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/joinDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"
                    android:backgroundTint="#7387CEEB"
                    android:textColor="#000000"/>

                 <!-- רווח קטן בין הטקסט לכפתור -->
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joindate"
                    android:gravity="center_vertical"
                    android:textSize="16dp"/>
            </LinearLayout>

            <!-- כתובת -->
            <EditText
                android:id="@+id/addressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:layout_marginBottom="5dp"/>

            <!-- שמות ההורים -->
            <EditText
                android:id="@+id/parent1NameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parent1name"
                android:inputType="textPersonName"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/parent2NameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parent2name"
                android:inputType="textPersonName"
                android:layout_marginBottom="5dp"/>

            <!-- טלפון הורה -->
            <EditText
                android:id="@+id/parentPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_ofparent"
                android:inputType="phone"
                android:gravity="end"
                android:layout_marginBottom="5dp"/>

            <!-- קונטיינר להצגת תמונה וכפתור באותה שורה -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginBottom="10dp">

                <!-- תמונת פרופיל -->
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/default_profile"
                    android:scaleType="centerCrop"
                    android:padding="5dp"
                    android:layout_marginEnd="10dp"/>

                <!-- כפתור להעלאת תמונה -->
                <Button
                    android:id="@+id/uploadImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_photo"
                    android:backgroundTint="#7387CEEB"
                    android:textColor="#000000"/>
            </LinearLayout>


            <!-- כפתור הוספה -->
            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_to_system"
                android:backgroundTint="#004FAA" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
