<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:backgroundTint="#000000">

    <!-- תמונת רקע עם שקיפות -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:alpha="0.2"
        android:scaleType="fitXY"
        android:src="@drawable/popupwindow" />

    <!-- תוכן הפופ-אפ מעל התמונה -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- כפתור "X" לסגירת הפופ-אפ -->
        <ImageView
            android:id="@+id/closePopupButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:background="#ECEAEA"
            android:padding="4dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <!-- תיבת טקסט להזנת תאריך עזיבה -->
        <EditText
            android:id="@+id/departureDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/leavingDate"
            android:inputType="none"
            android:textSize="18sp" />

        <!-- כפתור לוח שנה -->
        <Button
            android:id="@+id/calendarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#77F7DB61"
            android:text="@string/ChooseTheDate"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <!-- כפתור למחיקה -->
        <Button
            android:id="@+id/deleteConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#92A80707"
            android:text="@string/clickForDelete"
            android:textSize="16sp"
            />
    </LinearLayout>

</FrameLayout>
